[feat]: [CCM-13337]: Added support for azure subscription ids in CCM connector filter